[package]
name = "litehtml-sys"
version = "0.1.2"
edition = "2021"
license = "MIT AND BSD-3-Clause AND Apache-2.0"
authors = ["Franz Geffke <mail@gofranz.com>"]
description = "Raw FFI bindings for litehtml (C++ HTML/CSS rendering engine)"
repository = "https://github.com/franzos/litehtml-rs"
keywords = ["litehtml", "html", "css", "ffi", "rendering"]
categories = ["external-ffi-bindings", "rendering"]
exclude = ["tests/"]

[features]
default = ["vendored"]
vendored = []

[build-dependencies]
cc = "1"
bindgen = "0.71"

[dependencies]
